test/good/basic/cond05.px

func f(x: Int): Int def
    print x
    return x

print f(0) == f(0) ? f(1) : f(2)
print f(0) != f(0) ? f(1) : f(2)
