test/bad/functions/call12.px

func f(Float x) def
    return

f(0)
